# fuse-zipfs

./: .dockerignore  .gitignore  .harper-dictionary.txt  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  docker-compose.yaml  flake.nix  renovate.json
.github/workflows/: ci.yml  docker-publish.yml
src/: file_tree.rs  filesystem.rs  lib.rs  main.rs  metadata.rs
tests/: concurrency.rs  filesystem_test.rs
